# proxy-saller

./: .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  example.env  mkdocs.yml  pyproject.toml
.github/workflows/: CQ.yaml  package.yaml
bot/: __init__.py
bot/cache/: __init__.py  redis.py
bot/core/: __init__.py  config.py  main.py
bot/handlers/: __init__.py  start.py
bot/locales/en/LC_MESSAGES/: messages.po
bot/locales/ru/LC_MESSAGES/: messages.po
bot/middlewares/: __init__.py  i18n.py
docs/: api.md
