[project]
name = "proxy-saller-bot"
version = "0.0.1"
description = "Sosal bot for selling proxies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "sqlalchemy>=2.0.19",
    "babel>=2.17.0",
    "redis>=6.4.0",
    "python-decouple>=3.8",
    "asyncpg>=0.30.0",
    "uvicorn>=0.35.0",
    "sqlmodel>=0.0.25",
    "pydantic-settings>=2.11.0",
    "apscheduler>=3.11.0",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
  "ruff>=0.12.3",
  "pytest-asyncio",
  "mypy>=1.17.1",

]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.18",
    "mkdocstrings>=0.30.0",
    "mkdocstrings-python>=1.18.2"
]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = [".venv"]

[lint]
select = [
    "E", "F", "W",   # flake8
    "I",             # isort
    "D",             # pydocstyle
]
pydocstyle.convention = "google"
